# mlx-primitives

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  benchmark_results_new.json  full_benchmark_results.json  mkdocs.yml  pre_fix_results.json  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __init__.py  __main__.py  bench_fused_rope_attention.py  charts.py  config.py  memory.py  runner.py  suite.py  utils.py
benchmarks/backward/: __init__.py  attention_backward.py  kernels_backward.py  moe_backward.py
benchmarks/baselines/: __init__.py  jax_metal.py  jax_metal_extended.py  mlx_native.py  pytorch_mps.py  pytorch_mps_extended.py
benchmarks/parity/: __init__.py  comparison.py  config.py  runner.py
benchmarks/reports/: __init__.py  comparison_tables.py  json_exporter.py  markdown_generator.py  regression_detector.py  table_formatter.py
benchmarks/suites/: __init__.py  attention.py  cache.py  generation.py  kernels.py  kernels_extended.py  layers.py  memory.py  moe.py  quantization.py  scan.py  training.py
docs/: getting_started.md  index.md
docs/api/: advanced.md  attention.md  cache.md  dsl.md  generation.md  hardware.md  index.md  kernels.md  memory.md  primitives.md  training.md
docs/guides/: architecture.md  index.md  performance.md
examples/: README.md
examples/basic/: flash_attention.py  gradient_checkpointing.py  moe_layer.py  sliding_window.py
metal/activations/: swiglu.metal
metal/attention/: alibi.metal  chunked_cross_attention.metal  flash_attention.metal  fused_rope_flash_attention.metal  rope.metal  sliding_window_attention.metal
metal/fused/: rmsnorm_linear.metal  swiglu.metal
metal/normalization/: groupnorm.metal  rmsnorm.metal
metal/primitives/: associative_scan.metal  selective_gather_scatter.metal
metal/quantization/: int4_matmul.metal  int8_matmul.metal
metal/utils/: reduce.metal  softmax.metal
mlx_primitives/: __init__.py  constants.py
mlx_primitives/advanced/: __init__.py  kv_cache.py  moe.py  quantization.py  ssm.py
mlx_primitives/ane/: __init__.py  detection.py  dispatch.py  model_cache.py
mlx_primitives/attention/: __init__.py  _online_softmax.py  alibi.py  chunked.py  flash.py  grouped_query.py  linear.py  multi_query.py  quantized_kv_cache.py  rope.py  sliding_window.py  sparse.py
mlx_primitives/benchmarks/: __init__.py
mlx_primitives/cache/: __init__.py  block_allocator.py  compressed_cache.py  eviction.py  kv_cache.py  page_table.py  paged_attention.py  protocols.py  simple_cache.py  speculative.py
mlx_primitives/config/: __init__.py  precision.py
mlx_primitives/data/: __init__.py  dataloader.py  dataset.py  sampler.py  text_transforms.py  transforms.py
mlx_primitives/dsl/: __init__.py  autotuner.py  decorators.py  primitives.py  types.py
mlx_primitives/generation/: __init__.py  batch_manager.py  engine.py  requests.py  samplers.py  scheduler.py
mlx_primitives/hardware/: __init__.py  autotuner.py  detection.py  tiling.py  tiling_database.py
mlx_primitives/kernels/: __init__.py  _registry.py  block_config.py  fused_activations.py  fused_norm_linear.py  fused_ops.py  fused_rope_attention.py  gqa_optimized.py  hardware_info.py  layernorm.py  quantized_linear.py  rmsnorm.py  rope.py  swiglu.py
scripts/: generate_pytorch_golden.py
tests/: __init__.py  conftest.py  reference.py  reference_jax.py  reference_jax_extended.py  reference_pytorch.py  reference_pytorch_extended.py  test_logging.py
(+246 files in other folders)
